--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,48 @@
-h1 {
-  background-color: blue;
-  color: white; }
+.vcenter {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%); }
+
+html body {
+  height: 100vh; }
+
+#calculator {
+  width: 48vmin;
+  height: 84vmin;
+  color: #ecf0f1; }
+  #calculator #result {
+    background-color: #6C7A89;
+    height: 16vmin;
+    text-align: right;
+    line-height: 16vmin;
+    font-size: 8vmin;
+    padding: 0 2vmin; }
+  #calculator #preview {
+    background-color: #7f8c8d;
+    height: 8vmin;
+    text-align: right;
+    line-height: 8vmin;
+    font-size: 3vmin;
+    padding: 0 2vmin; }
+  #calculator .key {
+    padding: 0;
+    height: 12vmin;
+    width: 12vmin;
+    background-color: #E26A6A;
+    box-sizing: border-box;
+    text-align: center;
+    line-height: 12vmin;
+    font-size: 3vmin; }
+  #calculator .key#equals {
+    width: 24vmin; }
+  #calculator .key#plus {
+    height: 24vmin;
+    line-height: 24vmin; }
+  #calculator .key:hover {
+    background-color: #F1A9A0; }
+  #calculator .key:active {
+    background-color: #ee958a; }
+  #calculator .key-group {
+    padding: 0; }
 
 /*# sourceMappingURL=main.css.map */
