--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -33,19 +33,12 @@ html body {
  .key {
   padding: 0;
   height: 12vmin;
-  width: 12vmin;
   background-color: #E26A6A;
   box-sizing: border-box;
   text-align: center;
   line-height: 12vmin;
   font-size: 3vmin; 
- }
- .key#equals {
-  width: 24vmin; 
- }
- .key#plus {
-  height: 24vmin;
-  line-height: 24vmin; 
+  border: 0.5px solid white;
  }
  .key:hover {
   background-color: #F1A9A0;
